# target-backend

./: .gitignore  README.md  main.py  pyproject.toml
app/: api.py  core.py
app/schemas/: user_schema.py
domain/usecases/users/: usecases.py
infrastructure/: adapters.py
infrastructure/adapters/: database.py
infrastructure/repositories/: user_repo.py
